// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deposit into existing position: depositBase 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 130910,
}
`;

exports[`Deposit into existing position: depositQuote 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 130814,
}
`;

exports[`Liquidation liquidate long position and create new long position 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 266240,
}
`;

exports[`Liquidation liquidate long position and create new position 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 294097,
}
`;

exports[`Liquidation liquidate short position and create new position 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 307423,
}
`;

exports[`Liquidation liquidate short position and create new short position 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 282258,
}
`;

exports[`Open position: depositBase 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 212237,
}
`;

exports[`Open position: depositQuote 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 212113,
}
`;

exports[`System initialized: closePosition 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 235980,
}
`;

exports[`System initialized: depositBase 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 211067,
}
`;

exports[`System initialized: depositBase and long 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 367778,
}
`;

exports[`System initialized: depositQuote 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 210898,
}
`;

exports[`System initialized: depositQuote and short 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 345927,
}
`;

exports[`System initialized: long 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 309338,
}
`;

exports[`System initialized: short 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 287595,
}
`;

exports[`System initialized: withdrawBase 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 180524,
}
`;

exports[`System initialized: withdrawQuote 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 188941,
}
`;

exports[`mc happens: MC long position with deleverage 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 225686,
}
`;

exports[`mc happens: MC long reinit 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 194899,
}
`;

exports[`mc happens: MC short position with deleverage 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 225754,
}
`;

exports[`mc happens: MC short reinit 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 194852,
}
`;

exports[`mc happens: closePosition with two mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 373673,
}
`;

exports[`mc happens: depositBase with one mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 259587,
}
`;

exports[`mc happens: depositBase with two mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 358446,
}
`;

exports[`mc happens: depositQuote with one mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 250291,
}
`;

exports[`mc happens: depositQuote with two mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 288597,
}
`;

exports[`mc happens: long closePosition with one mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 264093,
}
`;

exports[`mc happens: long initialized heap with one mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 291960,
}
`;

exports[`mc happens: long with one mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 369181,
}
`;

exports[`mc happens: long with two mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 389308,
}
`;

exports[`mc happens: short with one mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 336857,
}
`;

exports[`mc happens: short with two mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 384505,
}
`;
